acme-ops/src/k8s/overlays/dev/delete-acme-app-web.yml
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-app-web
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: acme-app-web
